--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,42 @@
     transform: rotate(360deg);
   }
 }
+
+
+.wrapper {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 10px;
+  grid-auto-rows: minmax(100px, auto);
+}
+.one {
+  grid-column: 1 / 2;
+  background-color: blue;
+  grid-row: 1/3;
+}
+.two {
+  grid-column: 2 / 3;
+  grid-row: 2 / 4;
+  background-color: red;
+}
+.three {
+  grid-column: 1;
+  grid-row: 3/ 5;
+  background-color: rgb(255, 217, 0);
+  gap: 0.5em
+}
+.four {
+  grid-column: 3;
+  grid-row: 3;
+  background-color: rgb(255, 0, 119);
+}
+.five {
+  grid-column: 2;
+  grid-row: 4;
+  background-color: rgb(255, 60, 0);
+}
+.six {
+  grid-column: 3;
+  grid-row: 4;
+  background-color: rgb(173, 143, 8);
+}
