--- a/src/App.css
+++ b/src/App.css
@@ -1,77 +1,30 @@
-.App {
-  text-align: center;
+@font-face {
+  font-family: "Graphik";
+  src: url("./assets/fonts/GraphikRegular.otf") format("truetype");
+  font-weight: 400;
+}
+@font-face {
+  font-family: "GTWalsheimPro";
+  src: url("./assets/fonts/GTWalsheimPro.ttf") format("truetype");
+  font-weight: 700;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+html, body{
+   -webkit-font-smoothing: antialiased;
+   -moz-osx-font-smoothing: grayscale;
+   font-size: 16px;
+   padding:0px;
+   margin:0px;
+   padding:0px;
+   font-family: 'Graphik'; 
+   font-family: 400;
+   color:#3F403F
+ }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+h1, h2, h3, h4{
+  font-family: 'GTWalsheimPro';
+};
 
 
-.wrapper {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 10px;
-  grid-auto-rows: minmax(100px, auto);
-}
-.one {
-  grid-column: 1 / 2;
-  background-color: blue;
-  grid-row: 1/3;
-}
-.two {
-  grid-column: 2 / 3;
-  grid-row: 2 / 4;
-  background-color: red;
-}
-.three {
-  grid-column: 1;
-  grid-row: 3/ 5;
-  background-color: rgb(255, 217, 0);
-  gap: 0.5em
-}
-.four {
-  grid-column: 3;
-  grid-row: 3;
-  background-color: rgb(255, 0, 119);
-}
-.five {
-  grid-column: 2;
-  grid-row: 4;
-  background-color: rgb(255, 60, 0);
-}
-.six {
-  grid-column: 3;
-  grid-row: 4;
-  background-color: rgb(173, 143, 8);
-}
+
+
